--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,6 +2,11 @@ server {
     listen 80;
     client_max_body_size 10M;
 
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/api/v1/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
