--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -7,6 +7,11 @@ server {
         proxy_pass http://backend:8000/api/v1/;
     }
 
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/admin/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
