--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,16 +1,21 @@
 version: '3.3'
-services:
 
+volumes:
+  static:
+
+services:
   backend:
     container_name: foodgram-backend
     build: ../backend
-    ports:
-      - 8000:8000
+    volumes:
+      - static:/backend_static
+  
   frontend:
     container_name: foodgram-front
     build: ../frontend
     volumes:
       - ../frontend/:/app/result_build/
+  
   nginx:
     container_name: foodgram-proxy
     image: nginx:1.25.4-alpine
@@ -20,3 +25,5 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+    volumes_from:
+      - backend:ro
