--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -17,6 +17,10 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
+    location /media/ {
+        alias /app/foodgram/media/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
