Add short link logic

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -17,6 +17,11 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
+    location /s/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000;
+    }
+
     location /media/ {
         alias /app/foodgram/media/;
     }
