--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt --no-cache-dir
+RUN apt update && apt install wkhtmltopdf -y
 
 COPY . .
 
